syntax = "proto3";
package grpc;

option go_package = ".;grpc";

message HelloRequest{
  string name = 1;
  string sex = 2;
}

message HelloResponse{
  string message = 1;
}

message SumRequest{
  int32 a = 1;
  int32 b = 2;
}

message SumResponse{
  int32 total = 1;
}

service Grpc{
  rpc SayHello(HelloRequest) returns (HelloResponse){}
  rpc SumFunc(SumRequest) returns (SumResponse){}
}



